--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="formulario.html">Contacto</a></li>
         <li><a href="menu.html">Menú</a></li>
-        <li><a href="cafeclementenuevo/pedidos/pedidos.html">Pedidos</a></li>
+        <li><a href="pedidos/pedidos.html">Pedidos</a></li>
         <li><a href="eventos.html">Eventos</a></li>
       </ul>
 
@@ -28,7 +28,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="formulario.html">Contacto</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="cafeclementenuevo/pedidos/pedidos.html">Pedidos</a></li>
+        <li><a href="pedidos/pedidos.html">Pedidos</a></li>
         <li><a href="eventos.html">Eventos</a></li>
       </ul>
       <a href=".sidenav" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
