--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="formulario.html">Contacto</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+                <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
                 <li><a href="eventos.html">Eventos</a></li>
             </ul>
 
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="formulario.html">Contacto</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+                <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
                 <li><a href="eventos.html">Eventos</a></li>
             </ul>
             <a href=".sidenav" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -50,7 +50,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Chilaquiles<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Chilaquiles<i
@@ -68,7 +68,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Enchiladas<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Enchiladas<i
@@ -87,7 +87,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Quesadillas<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Quesadillas<i
@@ -110,7 +110,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Tamal de rajas<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Tamal de rajas<i
@@ -128,7 +128,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Tamal de rojo<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Tamal de rojo<i
@@ -147,7 +147,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Tamal de elote<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title<i
@@ -170,7 +170,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Conchas<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Conchas<i
@@ -188,7 +188,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Churros<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Churros<i
@@ -207,7 +207,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Arroz con leche<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Arroz con leche<i
@@ -230,7 +230,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Pan de muerto<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Pan de muerto<i
@@ -248,7 +248,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Capirotada<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Capirotada<i
@@ -267,7 +267,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Nieve<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Nieve<i
@@ -290,7 +290,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Café de olla<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Café de olla<i
@@ -308,7 +308,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Chocolate caliente<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Chocolate caliente<i
@@ -327,7 +327,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Horchata<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Horchata<i
@@ -350,7 +350,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Aguas frescas<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Aguas frescas<i
@@ -368,7 +368,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Te de manzanilla<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Te de manzanilla<i
@@ -387,7 +387,7 @@
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Champurrado<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="pedidos/pedidos.html">comprar</a></p>
+                    <p><a href="Pedidos/pedidos.html">comprar</a></p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Champurrado<i
