--- a/eventos.html
+++ b/eventos.html
@@ -18,7 +18,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="formulario.html">Contacto</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+        <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
         <li><a href="eventos.html">Eventos</a></li>
       </ul>
 
@@ -26,7 +26,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="formulario.html">Contacto</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+        <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
         <li><a href="eventos.html">Eventos</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
