--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="formulario.html">Contacto</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+                <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
                 <li><a href="eventos.html">Eventos</a></li>
             </ul>
 
@@ -62,7 +62,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="formulario.html">Contacto</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="pedidos/pedidos.html">Pedidos</a></li>
+                <li><a href="Pedidos/pedidos.html">Pedidos</a></li>
                 <li><a href="eventos.html">Eventos</a></li>
             </ul>
             <a href=".sidenav" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
