--- a/menu.html
+++ b/menu.html
@@ -69,25 +69,26 @@
         </div>
     </nav>
 
-    <!-- Carrito -->
+<!-- Carrito -->
 <div id="cart-container" class="fixed-action-btn">
     <a class="btn-floating btn-large purple" href="#" id="cart-btn">
         <i class="material-icons">shopping_cart</i>
     </a>
     <div id="cart-details" class="card purple darken-4 white-text">
         <div class="card-content">
-            <h5></h5>
-            <ul id="cart-items"></ul>
+            <h5 class="responsive-text">Carrito</h5>
+            <ul id="cart-items" class="collection purple darken-4"></ul>
             <p><strong>Total: </strong><span id="total-price">$0</span></p>
-            <a href="Pedidos/pedidos.html">comprar</a>
+            <a href="Pedidos/pedidos.html" class="btn waves-effect waves-light purple lighten-2 white-text">Comprar</a>
         </div>
     </div>
 </div>
 
-<div id="carrito-lista">
-    <h5></h5>
+<div id="carrito-lista" class="container">
+    <h5 class="center-align responsive-text">Productos seleccionados</h5>
     <!-- Aquí se mostrarán los productos seleccionados -->
 </div>
+
 
     <h3 class="center-align yellow-text text-darken-2">Menú</h3>
 <div class="row">
@@ -116,12 +117,12 @@
                 <img class="activator responsive-img" src="imagenes/insumos/enchilada2.jpg">
             </div>
             <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Enchiladas<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4 responsive-text">Enchiladas<i class="material-icons right">more_vert</i></span>
                 <p><a href="#" data-product="Enchiladas" data-price="95">comprar</a></p>
                 <p class="price">$95 MXN</p> <!-- Precio agregado aquí -->
             </div>
             <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Enchiladas<i class="material-icons right">close</i></span>
+                <span class="card-title grey-text text-darken-4 responsive-text">Enchiladas<i class="material-icons right">close</i></span>
                 <p>Enchiladas rellenas de pollo, bañadas en salsa verde de tomatillo, con crema y queso.</p>
             </div>
         </div>
